Fixed issue with code not running

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: DeathBoard
 version: ${project.version}
-main: com.tristanphan.deathboard.DeathBoard
+main: com.tristanphan.DeathBoard.DeathBoard
 api-version: 1.13
 
 commands:
